@@ -7,7 +7,7 @@
 				<?php //<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a><br />
 				?>
 				This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 Unported License</a>. <br />
-			 	(c) <?php echo date('Y'); ?> <?php bloginfo('name'); ?> | 
+			 	(c) 2004-<?php echo date('Y'); ?> <?php bloginfo('name'); ?> | 
 			 	powered by	<a href="http://wordpress.org/">WordPress</a>
 				with <a href="http://shaheeilyas.com/barecity">Barecity</a>
 			</div>
